Fix link navigation

--- a/css/main.css
+++ b/css/main.css
@@ -387,7 +387,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
 
   .hero {
     background-color: var(--dark-color);
-    background-image: url('../images/hero-bg.jpg');
+    background-image: url('../images/banner/banner-1.jpg');
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
